k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ims
  labels:
    name: ims
    app: inventory-management-system
